--- a/FinalProject/FinalProject/Pages/PlantsPage.xaml
+++ b/FinalProject/FinalProject/Pages/PlantsPage.xaml
@@ -2,11 +2,34 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FinalProject.Pages.PlantsPage"
-             Title="PlantsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             xmlns:viewModels="clr-namespace:FinalProject.Core.ViewModels;assembly=FinalProject.Core"
+             xmlns:mdc="clr-namespace:Material.Components.Maui;assembly=Material.Components.Maui"
+             x:DataType="viewModels:PlantsPageViewModel">
+    <VerticalStackLayout Margin="5">
+        <mdc:Card>
+            <Grid Padding="10" ColumnSpacing="20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="45" />
+                </Grid.ColumnDefinitions>
+
+                <mdc:TextField LabelText="Search for plant"
+                               Grid.Column="0"
+                               Loaded="PlantSearchFieldLoaded"
+                               SupportingText=""/>
+
+                <mdc:IconButton IconKind="Add" 
+                                Grid.Column="1"
+                                Style="{DynamicResource FilledIconButtonStyle}" />
+            </Grid>
+        </mdc:Card>
+
+        <mdc:Card Margin="0, 20, 0, 0" >
+            <ScrollView Padding="10">
+                <ListView ItemsSource="{Binding Plants}" SelectionMode="None" ItemTemplate="{StaticResource ObservablePlantTemplate}" />
+            </ScrollView>
+        </mdc:Card>
+        
+        
     </VerticalStackLayout>
 </ContentPage>
