--- a/FinalProject/FinalProject/Pages/PlantsPage.xaml
+++ b/FinalProject/FinalProject/Pages/PlantsPage.xaml
@@ -26,10 +26,9 @@
 
         <mdc:Card Margin="0, 20, 0, 0" >
             <ScrollView Padding="10">
-                <ListView ItemsSource="{Binding Plants}" SelectionMode="None" ItemTemplate="{StaticResource ObservablePlantTemplate}" />
+                <CollectionView ItemsSource="{Binding Plants}" SelectionMode="None" ItemTemplate="{StaticResource ObservablePlantTemplate}" />
             </ScrollView>
         </mdc:Card>
-        
-        
+                
     </VerticalStackLayout>
 </ContentPage>
