--- a/FinalProject/FinalProject/Resources/Styles/Templates.xaml
+++ b/FinalProject/FinalProject/Resources/Styles/Templates.xaml
@@ -7,20 +7,22 @@
     xmlns:mdc="clr-namespace:Material.Components.Maui;assembly=Material.Components.Maui">
 
     <DataTemplate x:DataType="observableModels:ObservablePlant" x:Key="ObservablePlantTemplate">
-        <ViewCell>
-            <Grid VerticalOptions="Center" BackgroundColor="{Binding BackgroundColor, FallbackValue=Transparent}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="36" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <Grid VerticalOptions="Center" BackgroundColor="{Binding BackgroundColor, FallbackValue={StaticResource TransparentColor}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="36" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-                <Image Source="https://www.optiflor.nl/static/site/header-circle-plus-flower.png"
-                                               Grid.Column="0"
-                                               HeightRequest="36" 
-                                               WidthRequest="36"/>
+            <Image Source="https://www.optiflor.nl/static/site/header-circle-plus-flower.png"
+                       Grid.Column="0"
+                       HeightRequest="36" 
+                       WidthRequest="36"/>
 
-                <Label Grid.Column="1" Margin="-36, 0, 0, 0" HorizontalTextAlignment="Center" VerticalOptions="Center" Text="{Binding Plant.PlantName}" />
-            </Grid>
-        </ViewCell>
+            <Label Grid.Column="1" 
+                       Margin="-36, 0, 0, 0" 
+                       HorizontalTextAlignment="Center" 
+                       VerticalOptions="Center" 
+                       Text="{Binding Plant.PlantName}" />
+        </Grid>
     </DataTemplate>
 </ResourceDictionary>
