added temperature to the database

--- a/FinalProject/FinalProject/Pages/SettingsPage.xaml
+++ b/FinalProject/FinalProject/Pages/SettingsPage.xaml
@@ -19,7 +19,7 @@
                                   />
 
                     <mdc:ComboBox Style="{DynamicResource FilledComboBoxStyle}" 
-                                  LabelText="Update envoirment speed"
+                                  LabelText="Save environment in database frequency"
                                   Loaded="EnvoirmentSpeedComboboxLoaded"
                                   ItemsSource="{Binding UpdateEnviromentSpeedSetting.Values}"
                                   WidthRequest="250"
